[package]
name = "cimetrics-rs"
version = "0.2.0"
edition = "2021"
description = "Rust SDK for CI Metrics"
license = "Apache-2.0"

repository = "https://github.com/ci-metrics/cimetrics-rs"
documentation = "https://docs.rs/cimetrics-rs/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
